--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -116,6 +116,7 @@
         },
 
       _speakerSelected: function(e) {
+        console.log("this is where i am");
         console.log(this.$);
         var speaker = e.detail.speaker;
         console.log(e);
