--- a/software/src/omaha/templates/components/paging-controller.html
+++ b/software/src/omaha/templates/components/paging-controller.html
@@ -16,7 +16,8 @@
       }
       
       paper-card {
-        width: 100%
+        width: 100%;
+        text-align: center;
       }
      
       paper-slider {
