--- a/software/src/omaha/templates/components/target-selector.html
+++ b/software/src/omaha/templates/components/target-selector.html
@@ -6,9 +6,15 @@
 <link rel="import" href="/bower_components/paper-slider/paper-slider.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
+<script src="Chart.js"></script>
+<link rel="stylesheet" href="jquery-ui-1.11.4.css">
+<script src="jquery-1.10.2.js" type="text/jscript"></script>
+<!--<script src="jquery-2.2.0.js"></script>-->
+<script src="jquery-ui-1.11.4.js" type="text/jscript"></script>
+<script src="jquery.ui.touch-punch.js" type="text/jscript"></script>
 <!--<link rel="import" href="/bower_components/paper-checkbox//paper-checkbox.html">-->
 
-<dom-module id="volume-selector">
+<dom-module id="target-selector">
   <template>
     <style>
       :host {
@@ -31,51 +37,19 @@
         margin-top: 10px;
       }
     </style>
-   <paper-card heading="Volume" elevation="4">
+   <paper-card heading="Target" elevation="4">
       <div class="card-content">
-
-        <div id="slider" class="layout horizontal">
-          <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
-          <paper-slider id="volume2" pin min="0" max="100" value="{{internalVolume}}"></paper-slider>
-          <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
-        </div>
-
-        <!--<paper-checkbox> Music </paper-checkbox>-->
-
-        <h1 id="musicvolume"> Music Volume </h1>
-
-        <div id="slider2" class="layout horizontal">
-          <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
-          <paper-slider id="volume3" pin min="0" max="100" value="{{internalMusicVolume}}"></paper-slider>
-          <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
-        </div>
-
-        <h1 id="pagingvolumelabel"> Paging Volume </h1>
-
-        <div id="slider3" class="layout horizontal">
-          <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
-          <paper-slider id="volume4" pin min="1" max="100" value="{{internalPagingVolume}}"></paper-slider>
-          <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
-        </div>
-
-        <h1 id="soundmaskingvolume"> Sound Masking Volume </h1>
-
-        <div id="slider4" class="layout horizontal">
-          <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
-          <paper-slider id="volume5" pin min="1" max="100" value="{{internalSoundMaskingVolume}}"></paper-slider>
-          <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
-        </div>
-
+        <canvas id="myChart" class="chartClass" height="400" width="400"></canvas>
       </div>
       <div class="card-actions">
-        <paper-button on-click="_setVolumeClicked">set volume</paper-button>
+        <paper-button on-click="_setTargetClicked">set target</paper-button>
       </div>
     </paper-card>
-    <paper-toast id="toast">Volume set to <span>{{volume}}</span></paper-toast>
+    <paper-toast id="toast">Target set to <span>{{target}}</span></paper-toast>
   </template>
   <script>
     Polymer({
-      is: 'volume-selector',
+      is: 'target-selector',
       
       properties: {
         internalVolume: String,
@@ -194,5 +168,42 @@
         console.log("I am ready " + this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume) + " " + this.internalSoundMaskingVolume;
       }
     });
+
+    var dataArray = [42,42,47,53,54,51,46,47,46,45,40,37,38,40,41,39,38.5,34.5,32,30,30];
+
+    var data = {
+      labels: ["80","100","125","160","200","250","315","400","500","630","800","1k","1.25k","1.6k","2k","2.5k","3.15k","4k","5k","6.3k","8k"],
+      datasets: [
+        {
+          fillColor: "rgba(33,67,214,0.25)",
+          strokeColor: "#3367d6",
+          pointColor: "#fff",
+          pointStrokeColor: "#3367d6",  
+          data: dataArray,
+        }
+      ]
+    }
+  $(document).ready(function() {
+    var canvas = document.getElementById("myChart");
+    console.log(canvas);
+    var me = $(canvas).offsetParent(); // use this when using a container
+    //console.log(me)
+    var width = $(window).width();
+    console.log(width)
+    canvas.width = $(window).width() * .8;
+    canvas.height = .98 * $(window).height() / 1.65;
+
+    var myChart = document.getElementById("myChart").getContext("2d");
+    new Chart(myChart).Line(data, {
+      scaleOverride: true,
+      scaleSteps: 10,
+      scaleStartValue: -20,
+        scaleStepWidth: 10,
+        scaleShowLabels: true,
+      scaleFontSize: 12
+    });
+  });
+    
+
   </script>
 </dom-module>
